<resources>
    <string name="app_name">TheCoffee</string>
    <string name="splashscreen">SplashScreen</string>
    <string name="backgroundloginscreen">BackgroundLoginScreen</string>
    <string name="iconclose">IconClose</string>
    <string name="titleHeader">Chào mừng bạn đến với</string>
    <string name="codePhone">+84</string>
    <string name="placeholderPhone">Nhập số điện thoại</string>
    <string name="scope">|</string>
    <string name="LogIn">Đăng nhập</string>
    <string name="textOr">Hoặc</string>
    <string name="LoginwithGG">Tiếp tục bằng Google</string>
    <string name="default_web_client_id">1044496875060-b5d6dv8r1vrgv5ar6bnmdu6h3n7ntnik.apps.googleusercontent.com</string>
    <string name="title_user_info">Cập nhật thông tin</string>
    <string name="hint_first_name">Nhập tên của bạn *</string>
    <string name="hint_last_name">Nhập họ của bạn</string>
    <string name="hint_email">Email của bạn</string>
    <string name="hint_phone">Số điện thoại của bạn *</string>
    <string name="hint_birthday">Chọn ngày sinh</string>
    <string name="hint_gender">Chưa chọn giới tính</string>
    <string name="terms_and_conditions">Tôi đồng ý với các Điều khoản và điều kiện của The Coffee House</string>
    <string name="create_account">Cập nhật tài khoản</string>
    <string name="home">Trang chủ</string>
    <string name="order">Đặt hàng</string>
    <string name="store">Cửa hàng</string>
    <string name="voucher">Ưu đãi</string>
    <string name="other">Khác</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txtUsername">Chào bạn mới!</string>
    <string name="slogan">Đăng nhập để sử dụng những ưu đãi chỉ \n \t \t \t \t \t dành riêng cho app bạn nhé !</string>
    <string name="image_voucher">image_voucher</string>
    <string name="image_noti">image_noti</string>
    <string name="icon_coffee_cup">icon_coffee_cup</string>
    <string name="delivery">Giao hàng</string>
    <string name="icon_delivery">icon_delivery</string>
    <string name="icon_take_away">icon_take_away</string>
    <string name="take_away">Mang đi</string>
    <string name="icon_order">icon_order</string>
    <string name="order_view">Đơn hàng</string>
    <string name="icon_review">icon_review</string>
    <string name="review">Góp ý</string>
    <string name="icon_beans">icon_beans</string>
    <string name="beans">Đổi Bean</string>
    <string name="item_sale">Quà Chill</string>
    <string name="name_drink">name_drink</string>
    <string name="more">Xem thêm</string>
    <string name="name_voucher_bean">Mua 1 Tặng 1 \nTrà sữa Oolong</string>
    <string name="title_category">Danh mục</string>
    <string name="search_text">Tìm kiếm</string>
    <string name="title_other">Khác</string>
    <string name="loading">Loading</string>
    <string name="my_voucher">Voucher của tôi</string>
    <string name="historyBean">Lịch sử BEAN</string>
    <string name="my_voucher_layout">Phiếu ưu đãi của bạn</string>
    <string name="space_line">- - - - - - - - - - - - - - - -</string>
    <string name="status_pre_confirm">Đang chờ xác nhận</string>
    <string name="status_confirm">Đã xác nhận</string>
    <string name="status_delivery">Đang giao hàng</string>
    <string name="status_done_delivery">Giao hàng thành công</string>
    <string name="status_cancel">Đã hủy</string>
    <string name="btn_status_confirm">Xác nhận</string>
    <string name="btn_status_delivery">Giao hàng</string>
    <string name="btn_status_done_delivery">Hoàn thành</string>
    <string name="btn_status_cancel">Hủy</string>
    <string name="items">Sản phẩm</string>
    <string name="hint_otp_message">Một mã xác thực gồm 6 số đã được gửi đến số điện thoại</string>
    <string-array name="voucherUnit">
        <item>%</item>
        <item>đồng</item>
    </string-array>
</resources>