<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="@dimen/_15sdp"
    tools:context=".UserInfoActivity">

    <LinearLayout
        android:id="@+id/headerUser"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintHeight_percent=".1"
        app:layout_constraintBottom_toTopOf="@+id/relativeLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/btnBack"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:src="@drawable/icon_back" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:gravity="center"
            android:text="@string/title_user_info"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintHeight_percent=".9"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/headerUser">

        <EditText
            android:id="@+id/edtTextFirstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_default_border"
            android:hint="@string/hint_first_name"
            android:inputType="textPersonName"
            android:paddingHorizontal="@dimen/_10sdp"
            android:paddingVertical="@dimen/_10sdp" />

        <EditText
            android:id="@+id/edtTextLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edtTextFirstName"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/custom_default_border"
            android:hint="@string/hint_last_name"
            android:inputType="textPersonName"
            android:paddingHorizontal="@dimen/_10sdp"
            android:paddingVertical="@dimen/_10sdp" />

        <EditText
            android:id="@+id/edtTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edtTextLastName"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/custom_default_border"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:paddingHorizontal="@dimen/_10sdp"
            android:paddingVertical="@dimen/_10sdp" />

        <EditText
            android:id="@+id/edtTextPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edtTextEmail"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/custom_default_border"
            android:hint="@string/hint_phone"
            android:inputType="phone"
            android:paddingHorizontal="@dimen/_10sdp"
            android:paddingVertical="@dimen/_10sdp" />

        <LinearLayout
            android:id="@+id/btnDatePicker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edtTextPhone"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/custom_default_border"
            android:orientation="horizontal"
            android:paddingVertical="@dimen/_10sdp">

            <TextView
                android:id="@+id/textBirthDay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/hint_birthday"
                android:paddingHorizontal="@dimen/_10sdp"
                android:textSize="18sp" />

            <ImageView
                android:layout_width="@dimen/_18sdp"
                android:layout_height="@dimen/_18sdp"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:src="@drawable/icon_date" />
        </LinearLayout>

        <Spinner
            android:id="@+id/spinnerGender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btnDatePicker"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/custom_default_border"
            android:entries="@array/gender_options"
            android:paddingVertical="@dimen/_10sdp" />

        <CheckBox
            android:id="@+id/checkBoxTerms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/spinnerGender"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/terms_and_conditions" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnCreateAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/checkBoxTerms"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/custom_button"
            android:enabled="false"
            android:text="@string/create_account"
            android:textColor="@color/white_900"
            android:textSize="18sp"
            app:backgroundTint="@null" />
    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>