<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.LoginFragment">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:contentDescription="@string/backgroundloginscreen"
        android:scaleType="centerCrop"
        android:src="@drawable/image_login_screen"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent=".30"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/rounded_bg_login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent=".78"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/titleHeader"
            android:textColor="@color/black_900"
            android:textSize="@dimen/_15sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.18" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:src="@drawable/logo_line"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.2"
            app:layout_constraintWidth_percent=".7" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.6"
            app:layout_constraintWidth_percent=".85">

            <LinearLayout
                android:id="@+id/layoutEdtPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_default_border"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:layout_marginVertical="@dimen/_10sdp"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_2sdp"
                    android:src="@drawable/vietnam" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/_5sdp"
                    android:layout_marginEnd="@dimen/_5sdp"
                    android:text="@string/codePhone"
                    android:textSize="@dimen/_15sdp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/_5sdp"
                    android:layout_marginEnd="@dimen/_5sdp"
                    android:text="@string/scope"
                    android:textColor="@color/grey_400"
                    android:textSize="@dimen/_20sdp" />

                <EditText
                    android:id="@+id/edtPhoneNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/_5sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:background="@drawable/custom_edit_text"
                    android:hint="@string/placeholderPhone"
                    android:inputType="phone"
                    android:singleLine="true"
                    android:textSize="@dimen/_15sdp" />
            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnLogIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:background="@drawable/custom_button"
                android:enabled="false"
                android:text="@string/LogIn"
                android:textAllCaps="false"
                android:textColor="@color/white_900"
                android:textSize="@dimen/_15sdp"
                app:backgroundTint="@null" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/_20sdp"
                android:text="@string/textOr"
                android:textSize="@dimen/_15sdp" />

            <LinearLayout
                android:id="@+id/btnLogInGG"
                android:clickable="true"
                android:background="@drawable/custom_default_border"
                android:layout_marginTop="@dimen/_20sdp"
                android:paddingVertical="@dimen/_10sdp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:gravity="center_horizontal"
                android:layout_height="match_parent">

                <ImageView
                    android:clickable="false"
                    android:layout_marginRight="@dimen/_5sdp"
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:src="@drawable/icon_google" />
                <TextView
                    android:clickable="false"
                    android:textSize="@dimen/_15sdp"
                    android:text="@string/LoginwithGG"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnClose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:fabCustomSize="@dimen/_25sdp"
        android:backgroundTint="@color/grey_50"
        android:contentDescription="@string/iconclose"
        android:src="@drawable/icon_back"
        app:pressedTranslationZ="0dp"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1"
        app:layout_constraintHorizontal_bias="0"
        />


</androidx.constraintlayout.widget.ConstraintLayout>