<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="userInfo"
            type="com.example.thecoffee.other.user.model.User" />

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white_900"
        tools:context=".other.login.view.CreateUserInfoFragment">

        <!--    header-->
        <LinearLayout
            android:id="@+id/headerUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_marginVertical="@dimen/_20sdp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="center"
                android:text="Tạo tài khoản"
                android:textSize="@dimen/_15sdp"
                android:textStyle="bold" />
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/headerUser"
            android:layout_marginHorizontal="@dimen/_10sdp">

            <RelativeLayout
                android:id="@+id/view_edtName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp">

                <EditText
                    android:id="@+id/edtTextFirstName"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_45sdp"
                    android:layout_centerVertical="true"
                    android:background="@drawable/edittext_border_selector"
                    android:hint="@string/hint_first_name"
                    android:inputType="text"
                    android:paddingHorizontal="@dimen/_10sdp"
                    android:paddingVertical="@dimen/_10sdp"
                    android:singleLine="true"
                    android:textSize="@dimen/_12sdp" />
            </RelativeLayout>

            <EditText
                android:id="@+id/edtTextEmail"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp"
                android:layout_below="@+id/view_edtName"
                android:layout_marginTop="@dimen/_20sdp"
                android:background="@drawable/edittext_border_selector"
                android:hint="@string/hint_email"
                android:paddingHorizontal="@dimen/_10sdp"
                android:paddingVertical="@dimen/_10sdp"
                android:textSize="@dimen/_12sdp" />

            <RelativeLayout
                android:id="@+id/view_edtPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/edtTextEmail"
                android:layout_marginTop="@dimen/_20sdp">

                <EditText
                    android:id="@+id/edtTextPhone"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_45sdp"
                    android:layout_centerVertical="true"
                    android:background="@drawable/edittext_border_selector"
                    android:hint="@string/hint_phone"
                    android:inputType="phone"
                    android:paddingHorizontal="@dimen/_10sdp"
                    android:paddingVertical="@dimen/_10sdp"
                    android:textSize="@dimen/_12sdp" />
            </RelativeLayout>
        </RelativeLayout>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnDone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_margin="@dimen/_10sdp"
            android:background="@drawable/custom_button"
            android:enabled="false"
            android:text="Tạo tài khoản"
            android:textColor="@color/white_900"
            android:textSize="@dimen/_12sdp"
            app:backgroundTint="@null" />
        <ProgressBar
            android:id="@+id/progressBarGG"
            android:layout_width="@dimen/_35sdp"
            android:layout_height="@dimen/_35sdp"
            android:layout_centerInParent="true"
            android:visibility="gone"/>
    </RelativeLayout>
</layout>
